# DecoratorVerify

./: CMakeLists.txt  cmake_generate_windows.bat  shader_compile.bat
cmake_params/: common_params.cmake
decorator/: CmakeLists.txt
decorator/include/: deco_buffer.h  deco_camera.h  deco_descriptors.h  deco_device.h  deco_frame_info.h  deco_game_object.h  deco_model.h  deco_pipeline.h  deco_renderer.h  deco_swap_chain.h  deco_utils.h  deco_window.h
decorator/src/: deco_buffer.cpp  deco_camera.cpp  deco_descriptors.cpp  deco_device.cpp  deco_game_object.cpp  deco_model.cpp  deco_pipeline.cpp  deco_renderer.cpp  deco_swap_chain.cpp  deco_window.cpp
first_app/: CMakeLists.txt
first_app/include/: FirstApp.h  SimpleRenderSystem.h  first_app.h  keyboard_movement_controller.h  point_light_system.h  simple_render_system.h
first_app/src/: FirstApp.cpp  KeyboardMovementController.cpp  SimpleRenderSystem.cpp  first_app.cpp  keyboard_movement_controller.cpp  main.cpp  point_light_system.cpp  simple_render_system.cpp
resources/objs/: coordinate.txt
shaders/: shader_compiler.bat  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv
